# References: 
# - Package Definition
#   - https://opam.ocaml.org/doc/Manual.html#Package-definitions
# - Reference files:
#   - https://github.com/aantron/dream/blob/master/dream.opam
#   - https://github.com/mirage/mirage-www/blob/master/mirageio.opam

opam-version: "2.0"

name: "htmls"
version: "0.0.1"

synopsis: "A HTML language server"
description: """
A HTML language server providing support for editing HTML files.

TODO(janvhs): Add a list of supported features
"""

maintainer: ["Jan Fooken <dev@janvhs.com>"]
authors: ["Jan Fooken <dev@janvhs.com>"]
license: ["GPL-3.0-or-later"]

tags: ["TODO:" "add" "tags"]

homepage: "https://git.janvhs.com/htmls"
doc: "https://git.janvhs.com/htmls" # Normally a Website or Repo
bug-reports: "https://git.janvhs.com/htmls/issues"

depends: [
  "ocaml" {>= "5.1"} # The minimum ocaml compiler version
  "dune" {>= "3.12"} # The build tool

  "alcotest" {with-test} # Add colours to tests

  "odoc" {with-doc} # For documentation

  "ocamlformat" {with-dev-setup} # For a consistent format
  "ocaml-lsp-server" {with-dev-setup} # Autocomplete support
  "utop" {with-dev-setup} # Quick prototyping via a REPL
]

build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]

dev-repo: "git+https://git.janvhs.com/htmls.git"
